launch4j based exes with evn variable support